[gd_scene load_steps=6 format=3 uid="uid://c30mlwfrsxbcl"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_hvov7"]
[ext_resource type="Texture2D" uid="uid://c8wnnqs5lxs4j" path="res://assets/icons/Brightness.svg" id="1_x0k6q"]
[ext_resource type="Script" path="res://components/IntensityButton/IntensityButton.gd" id="2_5y0g3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tolaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdfeq"]
bg_color = Color(0, 0.513726, 1, 0.364706)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[node name="IntensityButton" type="Button"]
custom_minimum_size = Vector2(40, 38)
mouse_default_cursor_shape = 10
theme = ExtResource("1_hvov7")
keep_pressed_outside = true
script = ExtResource("2_5y0g3")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_tolaf")
theme_override_styles/fill = SubResource("StyleBoxFlat_jdfeq")
max_value = 1.0
show_percentage = false

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x0k6q")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
